add bootstrap to webpack

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    Welcome!
+    <div class="container">
+        Welcome!
+    </div>
+
 {% endblock %}
