Add basic form. URL manager modifying in progress

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,6 +3,11 @@
 {% block body %}
     <div class="container">
         Welcome!
+
+        <div class="form-group">
+            {{ form_widget(urlForm) }}
+        </div>
     </div>
+
 
 {% endblock %}
